Fixing hyphenation in credits so that it doesn't break the page width.

--- a/themes/independent-publisher-child-theme/style.css
+++ b/themes/independent-publisher-child-theme/style.css
@@ -469,9 +469,26 @@ and Blueprint http://www.blueprintcss.org/
 		font-weight:normal;
 	}
 
-	.featuredCreditNoCover, .featuredCutlineCredit, .postDetailCredit, .featuredAltCutlineCredit{
+	.featuredCreditNoCover, .featuredCutlineCredit, .postDetailCredit, .featuredAltCutlineCredit, .featuredCutlineCredit{
 		font-weight: normal !important;
 		font-family: 'Myriad Pro', Helvetica, Arial, sans-serif;
+
+		/*Adding/Fixing hyphenation for urls (so that it doesn't break page width.) */
+		/* These are technically the same, but use both */
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+
+		-ms-word-break: break-all;
+		/* This is the dangerous one in WebKit, as it breaks things wherever */
+		word-break: break-all;
+		/* Instead use this non-standard one: */
+		word-break: break-word;
+
+		/* Adds a hyphen where the word breaks, if supported (No Blink) */
+		-ms-hyphens: auto;
+		-moz-hyphens: auto;
+		-webkit-hyphens: auto;
+		hyphens: auto;
 	}
 
 	.archive .wp-post-image, .blog .wp-post-image, .page .wp-post-image, .single .wp-post-image, .single-attachment .entry-title-meta{
